Fix wrapping on cycle sidebar on watch

--- a/web/skins/classic/css/base/views/watch.css
+++ b/web/skins/classic/css/base/views/watch.css
@@ -11,6 +11,10 @@
   padding-right: 1px;
 }
 
+#sidebar .nav {
+  flex-wrap: nowrap;
+}
+
 #menuControls {
   display: flex;
   align-items: center;
